examples/test_package/steps/pl___aircr:rough.pl_run3/#test_analysis_3_result.txt
### **Evaluation Report: Aircraft Flap Controller in ProbLog**

---

#### **1. Document Title**
**Analysis of Aircraft Flap Controller Code in ProbLog: Error Identification and Root Cause Analysis**

---

#### **2. Background and Purpose**
The provided code models an aircraft flap controller system, where the flap's position is adjusted based on actuator strength, wind effects, and a target goal. The system is probabilistic, incorporating uncertainties in actuator selection and wind strength. The purpose of this evaluation is to:
- Verify the correctness of the code's logic and probabilistic reasoning.
- Identify and analyze the cause of the reported error.
- Ensure compliance with functional requirements and edge cases.

---

#### **3. Test Results Summary**
The test results indicate a failure during execution with the following error:
```plaintext
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for ''->'/2' at 33:207.
```

**Failed Queries:**
- The error occurs during the evaluation of the `attempted_flap_position/2` predicate, specifically at line 33. No queries were successfully executed due to this error.

---

#### **4. Failure Localization**
- **Failed Predicate:** `attempted_flap_position/2`
- **Code Location:** Line 33 (as indicated in the error message).
- **Issue:** The error suggests that the ProbLog engine could not find a valid clause for the predicate `attempted_flap_position/2`. This is likely due to a syntax or logical error in the predicate definition.

**Code Block with Issue:**
```prolog
attempted_flap_position(Time,Pos) :- 
    Time > 0, 
    Prev is Time-1, 
    flap_position(Prev, PrevPos), 
    \+ goal_reached(Prev), 
    use_actuator(Time, Actuator), 
    actuator_strength(Actuator, Strength), 
    wind_effect(Time, WindEffect), 
    goal(Target), 
    Delta is Target - PrevPos, 
    (Delta > 0 -> Direction = 1 ; Direction = -1), 
    Move is Direction * Strength + WindEffect, 
    Pos is PrevPos + Move.
```

---

#### **5. Root Cause Analysis**
- **Logical Correctness:** The predicate `attempted_flap_position/2` is intended to calculate the new flap position based on the previous position, actuator strength, wind effect, and target goal. The logic appears correct, but the error suggests a parsing or syntactic issue.
- **Probabilistic Rules:** The code uses probabilistic facts (e.g., `use_actuator/2`, `wind/1`, `wind_effect/2`), which comply with ProbLog's probabilistic rules. However, the error is not related to probabilistic reasoning but to clause resolution.
- **DeepProbLog:** No DeepProbLog features (e.g., `nn/3`, `tensor/...`) are used in this code.

**Potential Causes:**
1. **Syntax Error:** The predicate definition might contain an invisible or misplaced character (e.g., a missing parenthesis or operator).
2. **Clause Resolution:** The ProbLog engine might not recognize the predicate due to an incorrect header or missing dependencies.

---

#### **6. Overall Analysis**
- **Functional Requirements:**
  - **Classical Reasoning:** The logic for calculating the flap position is sound but fails due to a syntactic issue.
  - **Probabilistic Reasoning:** The probabilistic facts and rules are correctly defined but not evaluated due to the error.
  - **Neural Network Integration:** Not applicable (DeepProbLog not used).
- **Edge Cases:**
  - The code does not handle cases where `wind_effect/2` or `use_actuator/2` might fail to resolve.
  - Recursive termination is ensured by the `Time > 0` condition.

---

#### **7. Error Summary**

| No. | Problem                          | Impact                          | Suggestion                                  |
|-----|----------------------------------|---------------------------------|--------------------------------------------|
| 1   | Unknown clause for `attempted_flap_position/2` | Code execution halted | Verify syntax and ensure all predicates are correctly defined. |
| 2   | Probabilistic facts not evaluated | Incomplete test results | Fix the primary error to allow evaluation of probabilistic rules. |

---

**Word Count:** ~450 words.  

**Final Note:** The primary issue is a syntactic or parsing error in the `attempted_flap_position/2` predicate. Once resolved, the code should execute as intended, allowing for further testing of probabilistic and classical reasoning.